--- a/style.css
+++ b/style.css
@@ -35,4 +35,30 @@ h1{
     font-style: normal;
     font-weight: bold;
     color: whitesmoke;
+    background-color: darkslategray;
+}
+
+
+#menu{
+    width: 100%;
+    height: 40px;
+    background-color: cornflowerblue;
+    padding-top: 12px;
+}
+
+#menu a{
+    color: #ffffff;
+    font-family: Helvetica, sans-serif;
+    font-size: 18px;
+    text-decoration:none ;
+    font-weight: 800px ;
+
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+p{
+    color: beige;
+    padding-top: 20px;
+    background-color: black;
 }
